--- a/quiz.html
+++ b/quiz.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Benchmark - Quiz</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    djduiosdnaui
+    
+
+    <script src="script.js"></script>
 </body>
 </html>
