--- a/welcome.html
+++ b/welcome.html
@@ -24,7 +24,7 @@
 
     <div class="preQuiz">      <!-- volendo qui sia la checkbox che il button si possono mettere in due div diversi, al momento lascio così -->
         <!-- nome classe da cambiare -->
-        <input type="checkbox" value="I promise to answer myself without help from anyone" onclick="proceedUnlock()">
+        <input type="checkbox" onclick="proceedUnlock()"> I promise to answer myself without help from anyone
         <!-- primo nome che mi è venuto in mente per una funzione per sbloccare il tasto "PROCEED"-->
         <a href="quiz.html">
             <button>PROCEED</button>    <!-- tasto che si ricollega alla pagina dove ci saranno le domande -->
