--- a/welcome.html
+++ b/welcome.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
+    <header>
+        <img src="assets/epicode_logo.png" alt="epicode_logo">
+    </header>
     <div id="title">
         <h1>Welcome to <strong>your exam</strong></h1>
     </div>
