--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -34,6 +34,6 @@
         </a>
     </div>
 
-    <script src="quiz.js"></script> <!-- *VEDERE MESSAGGIO SU DISCORD* -->
+    <script src="welcome.js"></script> <!-- *VEDERE MESSAGGIO SU DISCORD* -->
 </body>
 </html>
