--- a/results/results.html
+++ b/results/results.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    
-
-    <script src="script.js"></script>
+    <script src="results.js"></script>
 </body>
 </html>
