--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/epicode_logo.png" alt="epicode_logo">
+        <img src="../assets/epicode_logo.png" alt="epicode_logo">
     </header>
     <div id="title">
         <h1>Welcome to <strong>your exam</strong></h1>
