--- a/results/results.html
+++ b/results/results.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benchmark - Quiz</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <title>Benchmark - Results</title>
+    <link rel="stylesheet" href="results.css">
 </head>
 <body>
+
+
     <script src="results.js"></script>
 </body>
 </html>
