--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benchmark - Welcome</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="welcome.css">
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
         <!-- nome classe da cambiare -->
         <input type="checkbox" onclick="proceedUnlock()"> I promise to answer myself without help from anyone
         <!-- primo nome che mi è venuto in mente per una funzione per sbloccare il tasto "PROCEED"-->
-        <a href="quiz.html">
+        <a href="../quiz/quiz.html">
             <button>PROCEED</button>    <!-- tasto che si ricollega alla pagina dove ci saranno le domande -->
         </a>
     </div>
