--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benchmark - Quiz</title>
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" type="text/css" href="quiz.css" /> 
+    <title>Document</title>
 </head>
 <body>
+    <div class="questionContainer">
+        <h2 class="question"></h2>
 
+    </div>
+    <button class="btn">click</button>
+    <p class="points">Points: </p>
 
-    <script src="../script.js"></script>
-    <script src="quiz.js"></script>
+    <script type="module" src="quiz.js"></script>
 </body>
 </html>
