--- a/results/results.html
+++ b/results/results.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="results.css">
 </head>
 <body>
-
+    <!-- PARAGRAFO TEMPORANEO. SE SI NECESSITA SI PUO' RIMUOVERE. -->
+    <p class="points">Points: </p>
+    <!-- PARAGRAFO TEMPORANEO. SE SI NECESSITA SI PUO' RIMUOVERE. -->
+    
 
     <script src="results.js"></script>
 </body>
