--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -7,12 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="questionContainer">
+    <!-- <div class="questionContainer">
         <h2 class="question"></h2>
 
     </div>
     <button class="btn">click</button>
     <p class="points">Points: </p>
+
+
+    SERENA LAVORA DA QUI IN GIU'. NON MODIFICARE/CANCELLARE IL CODICE SOPRA COMMENTATO. GRAZIE! -->
+
+    
 
     <script type="module" src="quiz.js"></script>
 </body>
