--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-    <!-- <div class="questionContainer">
-        <h2 class="question"></h2>
-
+    <div class="questionContainer">
+        <h2 class="question">CIAO</h2>
     </div>
-    <button class="btn">click</button>
 
-    SERENA LAVORA DA QUI IN GIU'. NON MODIFICARE/CANCELLARE IL CODICE SOPRA COMMENTATO. GRAZIE! -->
+    <!-- SERENA LAVORA DA QUI IN GIU'. NON MODIFICARE/CANCELLARE IL CODICE SOPRA COMMENTATO. GRAZIE! -->
 
     <!--prima parte-->
     <header>
