--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="questionContainer">
-        <h2 class="question">CIAO</h2>
+        <h2 class="question"></h2>
     </div>
 
     <!-- SERENA LAVORA DA QUI IN GIU'. NON MODIFICARE/CANCELLARE IL CODICE SOPRA COMMENTATO. GRAZIE! -->
@@ -27,7 +27,6 @@
     </div>
 
     <div id="titleQuiz">
-        <h2 class="question"></h2> <!-- tolgo il <br> -->
     </div>
 
 <!--seconda parte-->
