--- a/results/results.html
+++ b/results/results.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <p class="points">Points: </p>
     <div class="center-text">
         <h1>Risultati</h1>
         <h2>Il riassunto delle tue risposte:</h2>
@@ -28,6 +29,8 @@
         <p>Ti invieremo un certificato in pochi minuti</p>
         <p>Controlla la tua email (incluse promozioni e cartella spam)</p>
     </div>
+
+    <script src="results.js"></script>
 </body>
 
 </html>
