--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -37,8 +37,8 @@
     </div>
 
     <div class="results">
-        <h4>Punteggio finale: <span class="points"></span></h4>
-        <p></p>
+        <p id="finalText"></p>
+        <h4>Punteggio finale: <span id="points"></span></h4>
     </div>
 
     <script type="module" src="quiz.js"></script>
