--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -5,35 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benchmark - Welcome</title>
     <link rel="stylesheet" href="welcome.css">
+    <script src="welcome.js"></script>
+    <!-- Link per Font Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Outfit:wght@400;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="../assets/epicode_logo.png" alt="epicode_logo">
+        <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo">
     </header>
-    <div id="title">
-        <h1>Welcome to <strong>your exam</strong></h1>
-    </div>
-
-    <div class="Instruction">
-        <h3><strong>Instruction</strong></h3>
-        <p>We don't expect most engineers to know the answers to all of these
+    <main>
+        <h1>Welcome to<br><strong>your exam</strong></h1>
+        <div class="instructions">
+            <h3><strong>Instructions</strong></h3>
+            <p>We don't expect most engineers to know the answers to all of these
             <br>questions, so don't worry if you're unsure of a few of them.</p>
-        <ul>
-            <li>Each question is <strong>timed</strong> and can only be <strong>answered once</strong>.</li>
-            <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
-            <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-        </ul>
-    </div>
+            <ul>
+                <li>Each question is <b>timed</b> and can only be <strong>answered once</strong>.</li>
+                <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
+                <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
+            </ul>
+        </div>
+        <div class="preQuiz">
+            <input name="proceed" type="checkbox" onclick="proceedUnlock()">
+            <label for="proceed">
+                I promise to answer myself without help from anyone
+            </label>                     
+            <a href="../quiz/quiz.html">
+                <button class="cta">PROCEED</button>
+            </a>
+        </div>
+    </main>    
 
-    <div class="preQuiz">      <!-- volendo qui sia la checkbox che il button si possono mettere in due div diversi, al momento lascio così -->
-        <!-- nome classe da cambiare -->
-        <input type="checkbox" onclick="proceedUnlock()"> I promise to answer myself without help from anyone
-        <!-- primo nome che mi è venuto in mente per una funzione per sbloccare il tasto "PROCEED"-->
-        <a href="../quiz/quiz.html">
-            <button>PROCEED</button>    <!-- tasto che si ricollega alla pagina dove ci saranno le domande -->
-        </a>
-    </div>
-
-    <script src="welcome.js"></script> <!-- *VEDERE MESSAGGIO SU DISCORD* -->
+    <script src="welcome.js"></script>
+    <!-- *VEDERE MESSAGGIO SU DISCORD* -->
 </body>
 </html>
