--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="results">
-        <p id="finalText"></p>
+        <h4><p id="finalText"></p></h4>
         <h4>Punteggio finale: <span id="points"></span></h4>
     </div>
 
