--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -15,7 +15,7 @@
 
     <div class="testing">
         <div class="tondo">
-            <h2>16 SECONDS REMAINING</h2> 
+            <h2>SECONDS <span id="time"></span> REMAINING</h2> 
         </div>
     
         <div id="titleQuiz">
