--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -13,6 +13,8 @@
         <img src="../assets/epicode_logo.png" alt="epicode_logo">
     </header>
 
+    <!-- quiz -->
+
     <div class="testing">
         <div class="tondo">
             <h2>SECONDS <span id="time"></span> REMAINING</h2> 
@@ -36,9 +38,14 @@
         <!-- Assegno un id al button proceed delle domande per poterlo selezionare con js -->
     </div>
 
+
+    <!-- results -->
+
     <div class="results">
-        <h4><p id="finalText"></p></h4>
-        <h4>Punteggio finale: <span id="points"></span></h4>
+        <h4><p id="finalText">Peccato, non hai superato il test!</p></h4>
+        <h4>Risposte corrette: <span id="points">4/10 (40%)</span></h4>
+        <h4>Risposte sbagliate: <span id="wrong-points">6/10 (60%)</span></h4>
+        <div class="circularPercentageVisualization"></div>
     </div>
 
     <script type="module" src="quiz.js"></script>
