--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -17,7 +17,7 @@
 
     <div class="testing">
         <div class="tondo">
-            <h2>SECONDS <span id="time"></span> REMAINING</h2> 
+            <p  class="seconds" >SECONDS <br> <span id="time"></span> <br> REMAINING</p> 
         </div>
     
         <div id="titleQuiz">
