--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -26,16 +26,8 @@
         <div id="answers">
         </div>
     
-        <h3>QUESTION: <span id="questionNumber"></span></h3> <!-- ho inserito lo span per selezionare solo il numero e non il testo -->
+        <h3>QUESTION: <span id="questionNumber"></span></h3>
         <button id="proceedBtn">PROCEED</button>
-        
-        <!-- il button proceed serve per andare alla prossima domanda, non per andare alla pagina
-        dei risultati. Alla pagina dei risultati si va una volta che tutte le domande sono 
-        state ispezionate.Tolgo quindi il tag <a> -->
-        <!-- Inoltre tolgo il tag h3 dal div delle domande, perche' non sono abbastanza inerenti per stare
-        nello stesso contenitore -->
-        <!-- Assegno un id al tag h3 delle domande per poterlo selezionare con js -->
-        <!-- Assegno un id al button proceed delle domande per poterlo selezionare con js -->
     </div>
 
 
@@ -49,7 +41,6 @@
     </div>
 
     <script type="module" src="quiz.js"></script>
-    <!-- aggiungo type=module allo script per poter importare le 'questions' nello script stesso -->
 </body>
 
 </html>
