--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -26,7 +26,7 @@
         <div id="answers">
         </div>
     
-        <h3>QUESTION: <span id="questionNumber"></span></h3>
+        <h3 class="numberOfQuestion">QUESTION: <span id="questionNumber"></span><span id="maxquestionNumber"></span></h3>
         <button id="proceedBtn">PROCEED</button>
     </div>
 
