--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -50,10 +50,10 @@
     <!-- results -->
 
     <div class="results">
-        <h4><p id="finalText">Peccato, non hai superato il test!</p></h4>
-        <h4>Risposte corrette: <span id="points">4/10 (40%)</span></h4>
+        <h4 class="correctAnswersNum">Risposte corrette: <span id="points">4/10 (40%)</span></h4>
         <div class="circularPercentageVisualization"></div>
-        <h4>Risposte sbagliate: <span id="wrong-points">6/10 (60%)</span></h4>
+        <h4 class="wrongAnswersNum">Risposte sbagliate: <span id="wrong-points">6/10 (60%)</span></h4>
+        <h4><p id="finalText">Peccato, non hai superato il test!</p></h4>
     </div>
 
     <script type="module" src="quiz.js"></script>
