--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -56,6 +56,11 @@
         <h4><p id="finalText">Peccato, non hai superato il test!</p></h4>
     </div>
 
+    <footer>
+        <p>WebPage made by: <b>Cosmin Andrei Albu</b>, <b>Francesco De Mento</b>, <b>Serena Baccari</b>, <b>Riccardo Spadon</b> and 
+        <b>Domenico Zungri</b></p>
+    </footer>
+
     <script type="module" src="quiz.js"></script>
 </body>
 
