--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -16,7 +16,7 @@
         <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo">
     </header>
     <main>
-        <h1>Welcome to<br><strong>your exam</strong></h1>
+        <h1 class="welcomeTitle">Welcome to<br><strong>your exam</strong></h1>
         <div class="instructions">
             <h3><strong>Instructions</strong></h3>
             <p>We don't expect most engineers to know the answers to all of these
