--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo">
+        <!-- <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo"> -->
     </header>
 
     <!-- quiz -->
