--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo">
+        <!-- <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo"> -->
     </header>
     <main>
         <h1 class="welcomeTitle">Welcome to<br><strong>your exam</strong></h1>
