--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benchmark - Welcome</title>
-    <link rel="stylesheet" href="welcome.css">
-    <script src="welcome.js"></script>
+    <link rel="stylesheet" href="welcome/welcome.css">
     <!-- Link per Font Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +34,7 @@
                     </label>
                 </div>
                 <div class="right">
-                    <a href="../quiz/quiz.html">
+                    <a href="quiz/quiz.html">
                         <button class="cta">PROCEED</button>
                     </a>
                 </div>                     
@@ -43,6 +42,6 @@
         
     </main>    
 
-    <script src="welcome.js"></script>
+    <script src="welcome/welcome.js"></script>
 </body>
 </html>
