--- a/index.html
+++ b/index.html
@@ -3,45 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benchmark - Welcome</title>
-    <link rel="stylesheet" href="welcome/welcome.css">
-    <!-- Link per Font Google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&family=Outfit:wght@400;800&display=swap" rel="stylesheet">
+    <title>index</title>
+    <script src="index.js"></script>
 </head>
 <body>
-    <header>
-        <!-- <img class="logo" src="../assets/epicode_logo.png" alt="epicode_logo"> -->
-    </header>
-    <main>
-        <h1 class="welcomeTitle">Welcome to<br><strong>your exam</strong></h1>
-        <div class="instructions">
-            <h3><strong>Instructions</strong></h3>
-            <p>We don't expect most engineers to know the answers to all of these
-            <br>questions, so don't worry if you're unsure of a few of them.</p>
-            <ul>
-                <li>Each question is <b>timed</b> and can only be <strong>answered once</strong>.</li>
-                <li>Changing browser tab or opening other windows will <strong>invalidate the question</strong>.</li>
-                <li>This exam will take approx. <strong>0-5 minutes</strong>.</li>
-            </ul>
-        </div>
-        <section class="preQuiz">
-                <div class="left">
-                    <input type="checkbox" onclick="proceedUnlock()">
-                    <label for="checkox">
-                        I promise to answer myself without help from anyone
-                    </label>
-                </div>
-                <div class="right">
-                    <a href="quiz/quiz.html">
-                        <button class="cta">PROCEED</button>
-                    </a>
-                </div>                     
-        </section>
-        
-    </main>    
-
-    <script src="welcome/welcome.js"></script>
+    
 </body>
 </html>
