--- a/wrongScreen/wrongScreen.html
+++ b/wrongScreen/wrongScreen.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="wrongScreen.css">
     <title>Unacceptable screen width</title>
 </head>
 <body>
@@ -12,17 +13,3 @@
     </div>
 </body>
 </html>
-
-<style>
-body {
-    background-image: url('../assets/bg.jpg');
-}
-p {
-    color: red;
-    text-align: center;
-    font-size: 25px;
-}
-div {
-    margin-top: 300px;
-}
-</style>
