--- a/wrongScreen/wrongScreen.html
+++ b/wrongScreen/wrongScreen.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <p>This site can only be visited on devices with a width of at least 1400px.</p>
-        <p>Therefore it can't be visited on mobile phones.</p>
+        <p>Therefore it can't be visited on mobile phones. Use a pc.</p>
     </div>
 </body>
 </html>
