--- a/wrongScreen/wrongScreen.html
+++ b/wrongScreen/wrongScreen.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div>
-        <p>This site can only be visited on devices with a width of at least 1400px.</p>
-        <p>Therefore it can't be visited on mobile phones. Use a pc.</p>
+        <p>Use a PC.This site can only be visited on devices with a width of at least 1400px.</p>
+        <p>It can't be visited on mobile phones.</p>
+        <p>This message has manually been set by Andrei Albu.</p>
     </div>
 </body>
 </html>
