--- a/wrongScreen/wrongScreen.html
+++ b/wrongScreen/wrongScreen.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="wrongScreen.css">
     <title>Unacceptable screen width</title>
 </head>
+
 <body>
     <div>
-        <p>Use a PC.This site can only be visited on devices with a width of at least 1400px.</p>
-        <p>It can't be visited on mobile phones.</p>
+        <p>Use a PC.</p>
+        <p>This site can only be visited on devices with a width of at least 1400px. It can't be visited on mobile
+            phones.</p>
         <p>This message has manually been set by Andrei Albu.</p>
     </div>
 </body>
+
 </html>
